1.完成确认机制方案

--- a/springboot-rabbitmq/src/main/resources/application.properties
+++ b/springboot-rabbitmq/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.password=guest\
+//NONE 禁用发布确认模式，是默认值 CORRELATED 发布消息成功到交换器后会触发回调方法 SIMPLE
+spring.rabbitmq.publisher-confirm-type=correlated
